# rust-vulkan-engine

./: .gitattributes  .gitignore  Cargo.toml  NFTAbi.json  README.md  client.cap  control_ideas.txt  elevation_test.hdr  makefile  release.bat  rustdoc.cap  shader.vert  skybox.blend1  starship-os.s  test_room.danvox  test_room.danvox.bak
.github/workflows/: rust.yml
blender_files/: person.blend1
cubemap_forest/: irradiance.hdr
cubemap_ship/: equirectangular.hdr  irradiance_equirectangular.hdr
cubemap_space/: equirectangular.hdr  irradiance.hdr  skybox.blend  skybox.blend1
cubemap_white/: StandardCubeMap.hdr
models/console/: console.blend  model.glb
models/cube/: model.glb
models/hands/: hands.blend  hands.blend1  hands.mtl  model.glb
models/light/: light.blend  light.blend1  model.glb
models/person/: model - Copy.glb  model--works - Copy.glb  model.glb  person.blend  person.blend1  person.fbx  person.mtl
models/person/test/: model.gltf
models/planet/: .gitignore  albedo.xcf  planet.blend  planet.blend1  planet.glb  planet.mtl  untitled.blend
models/planet/data/: albedo.xcf
models/planet/deep_water/: water.blend
models/planet/desert/: sand.blend
models/planet/drawn-globe/: boat.xcf  grass.xcf  mountain.blend  mountain_base.xcf  trees.xcf  tress.blend  water.blend  wavygrass.xcf
models/planet/foliage/: albedo.xcf  normal.xcf
models/planet/mountain3/: mountain.blend
models/ship/: model.glb  normal_map.xcf  ship.blend  ship.blend1  ship.mtl
models/shotgun/: model.glb  shotgun.blend
models/sword/: model.glb
models/test_ball/: model.glb
shaders/: 3dSDF.comp  bakeVoronoi.comp  comp.spv  compile.bat  environment.comp  extras.glsl  irradiance.comp  map.glsl  shader.comp  shader.frag  shader.vert  test.comp  ui.frag  ui.vert
shaders/cubemap/: shader.frag  shader.vert
shaders/line/: shader.frag  shader.vert
shaders/planet/: atmosphere.glsl  elevation.glsl  normal.comp
shaders/postprocess_subpass/: shader.frag  shader.vert  voxels.glsl
shaders/province/: colors.glsl  shader.frag  shader.vert
src/: cube.rs  edge_triangulation.rs  game.rs  lib.rs  main.rs  marching_cubes.rs  market.rs  network.rs  nft.rs  octree.rs  organization.rs  planet_gen.rs  pop.rs  province_gen.rs  renderer.rs  support.rs  world.rs
src/emulator/: format.rs  memory.rs  mod.rs  opcodes.rs  processor.rs
src/renderer/: animation.rs  buffers.rs  combination_types.rs  cpu_image.rs  drawables.rs  mod.rs  ui.rs
src/renderer/vulkan_data/: descriptors.rs  draw.rs  main_pipeline.rs  mod.rs  model_loading.rs  utilities.rs
src/starship-os/: main.c  system.c  system.h
src/voxels/: marching_cubes.rs  mod.rs
src/world/: agent.rs  equipment.rs  ideology.rs  language.rs  mod.rs  organization.rs  party_names.rs  questions.rs  recipes.rs
world_data/elevation/: elevation.tif.aux.xml
world_data/language/: language.csv  language.tif
world_data/nations/: nations - Copy.csv  nations-only-one.csv  nations.csv
world_data/org_definitions/: 5.org  fallback.org
world_data/provinces/: provinces-with-caleb.qmd  provinces.qmd  provinces_small.geojson
