[package]
name = "rust-vulkan-engine"
version = "0.1.0"
authors = ["Daniel Wart <dman.wart@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
image = {version = "0.23.14", default-features = false, features = ["png", "hdr"]}
gltf = "0.16.0"
fastrand = "1.5.0"
erupt = "0.20.0"
vk-mem-erupt = {git = "https://github.com/onein50million/vk-mem-erupt.git", rev = "0888bf9f0903b12b638f8498316e473301a18689"}
nalgebra = { version = "0.30", features = ["serde-serialize"] }
bincode = { version = "2.0.0-alpha.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
egui = "0.15.0"
egui-winit = "0.15.0"
variant_count = "1.1"
num_enum = "0.5.7"
genmesh = "0.6.2"

gdal = {git = "https://github.com/onein50million/gdal.git"}
gdal-sys = {git = "https://github.com/onein50million/gdal.git"}

float-ord = "0.3.2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true
