[package]
name = "rust-vulkan-engine"
version = "0.1.0"
authors = ["Daniel Wart <dman.wart@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
image = {version = "0.23.14", default-features = false, features = ["png", "hdr"]}
gltf = "0.16.0"
#fastrand = "1.5.0"
erupt = "0.20.0"
vk-mem-erupt = {git = "https://github.com/onein50million/vk-mem-erupt.git", rev = "0888bf9f0903b12b638f8498316e473301a18689"}
nalgebra = { version = "0.31", features = ["serde-serialize"] }
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

egui = "0.15.0"
egui-winit = "0.15.0"
variant_count = "1.1"
num_enum = "0.5.7"
genmesh = "0.6.2"
gdal = "0.12.0"
gdal-sys = "0.6.0"
float-ord = "0.3.2"

noise = "0.7.0"

snap = "1.0.5"

csv = "1.1.6"
# slotmap = "1.0.6"

bitflags = "1.3.2"

lyon_tessellation = "1.0.2"
rusttype = "0.9.2"
rand = "0.8.5"
statrs = "0.16.0"

[features]
validation-layers = []

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true

[profile.release] 
debug = true
# lto = true

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]


[rust]
debuginfo-level = 1
